refatoracao na filtragem dos dados; inclusao dos dados por estado civil;

--- a/views/index.jade
+++ b/views/index.jade
@@ -4,5 +4,7 @@ block content
   h1= title
   p
     !=subtitle
-  #chart(width='400', height='400')
+  .chart#chart_genero(width='400', height='400')
+  .chart#chart_estado_civil(width='400', height='400')
+
 
