adicionado partido, coligacao e ocupacao como graficos;

--- a/views/index.jade
+++ b/views/index.jade
@@ -4,7 +4,9 @@ block content
   h1= title
   p
     !=subtitle
-  .chart#chart_genero(width='400', height='400')
-  .chart#chart_estado_civil(width='400', height='400')
-
-
+  .chart#chart_genero
+  .chart#chart_estado_civil
+  .chart.horizontal#chart_grau_instrucao
+  .chart.horizontal#chart_partido
+  .chart.horizontal#chart_coligacao
+    .chart.horizontal#chart_ocupacao
